@@ -4,6 +4,9 @@ Changelog
 3.1 (unreleased)
 ----------------
 
+- Moved collective_geo_styles indexer to c.geo.mapwidget
+  [gborelli]
+
 - Changed IGeoCustomFeatureStyle adapter to be specific for Archetypes contents
   [gborelli]
 
